--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "devDependencies": {
         "@types/node": "^24.6.0",
         "@types/vscode": "^1.104.0",
-        "typescript": "^5.9.2",
-        "@vscode/vsce": "^3.6.2"
+        "@vscode/vsce": "^3.6.2",
+        "husky": "^9.1.7",
+        "typescript": "^5.9.2"
     },
     "dependencies": {
         "cross-fetch": "^4.1.0",
